--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=" en">
 
     <head>
-        <title>PSD to HTML5</title>
+        <title>HOTEL DELUXE</title>
         <meta charset="UTF-8"/>
         <link type="text/css" rel="stylesheet" href="css/style.css"/>
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
